[gd_scene load_steps=2 format=3 uid="uid://y4xxgq3fdok8"]

[ext_resource type="Script" path="res://addons/clyde/editor/file_list.gd" id="1_xov0v"]

[node name="FileList" type="VBoxContainer"]
size_flags_vertical = 3
script = ExtResource("1_xov0v")

[node name="filter" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Filter files"

[node name="ItemList" type="ItemList" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true

[node name="Menu" type="PopupMenu" parent="."]

[connection signal="text_changed" from="filter" to="." method="_on_filter_text_changed"]
[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
